# SensorNetwork

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: balloon.h  base_station.h  grid.h  metrics.h  mpi_utils.h  my.h  sensor.h  sensor_network.h  utils.h
src/: balloon.c  base_station.c  grid_setting.c  main.c  metrics.c  mpi_utils.c  sensor.c  utils.c
src/base/: balloon_thread.c  base_station.c  fault_detection_thread.c  reading_thread.c
src/sensor/: sensor.c  sensor_data.c  sensor_data_cmp.c  sensor_data_cmp_distance.c  sensor_error.c  sensor_network.c
